--- a/index.css
+++ b/index.css
@@ -345,6 +345,12 @@ canvas {
 	height: auto;
 }
 
+.imagenes_takep {
+
+max-width: 150px;
+max-height: 150px;
+}
+
 .imagenes_takep a {
 	display:block;
 	float:right;
@@ -569,6 +575,8 @@ div, footer, main, nav, section {
 div.filter_on_video {
 	flex-direction: initial;
 	align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div.all_tmp div.filter_on_video {
@@ -719,7 +727,6 @@ main {
 	height: 100px;
 	position: absolute;
 	margin-left: 32%;
-	margin-top: 2%;
 	display: inline-flex;
 }
 
